--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "aoc"
+name = "aoc-2023"
 version = "0.1.0"
 description = ""
 authors = ["João Victor Teófilo Salgado <jvictorteo2000@hotmail.com>"]
